--- a/BR-MS/StorageLookup.html
+++ b/BR-MS/StorageLookup.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="lib/eleme-index.css">
     <link rel="stylesheet" href="res/print-form.css">
     <style>
+        [v-cloak] {
+            display: none;
+        }
+
         .demo-table-expand {
             font-size: 0;
         }
@@ -23,7 +27,7 @@
     </style>
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div v-show="state!==3">
         <el-card>
             <el-form :model="inSelection">
