--- a/BR-MS/signup.html
+++ b/BR-MS/signup.html
@@ -217,7 +217,7 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
-    var $ = require('jquery');
+    const $ = require('jquery');
     var post = require('/mods/backend');
 
     var app = new Vue({
