--- a/BR-MS/Welcome.html
+++ b/BR-MS/Welcome.html
@@ -363,9 +363,9 @@
         </div>
     </div>
 </body>
-<script src="lib/jquery.min.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
+    var $=require('jquery');
     (function () {
         var calendar = {
             /**
