--- a/BR-MS/mainPage.html
+++ b/BR-MS/mainPage.html
@@ -192,7 +192,7 @@
 <script src="res/dependencies.js"></script>
 <script>
     var post = require('/mods/backend');
-
+    var $=require('jquery');
     function judgeLogin() {
         post('/common/getms', {
             pageNum: 1
