--- a/BR-MS/Welcome.html
+++ b/BR-MS/Welcome.html
@@ -339,7 +339,7 @@
             <img src="res/light-bulb.png"
                 id="light-bulb-icon">
             <div class="desc-text">
-                <p>欢迎您使用“军民融合后勤物资多维度调度系统”！</p>
+                <p>欢迎您使用“军民融合后勤物资多维度调配系统”！</p>
                 <p>
                     <button
                         class="el-button el-button--primary is-plain"
@@ -365,7 +365,7 @@
 </body>
 <script src="res/dependencies.js"></script>
 <script>
-    var $=require('jquery');
+    var $ = require('jquery');
     (function () {
         var calendar = {
             /**
